@@ -1,5 +1,6 @@
 0.06
  - Fix copyright holder.
+ - Improve LICENSE AND COPYRIGHT section in doc.
  - Update author github username.
 
 0.05 2025-01-21T21:04:36+01:00
